--- a/CreateDataSet/ReadMozilaDataset.ipynb
+++ b/CreateDataSet/ReadMozilaDataset.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pydub\n",
     "import os\n",
-    "from IPython.display import clear_output\n"
+    "from IPython.display import clear_output\n",
+    "from uitiles import uitiles"
    ]
   },
   {
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
     "                NewName= uitiles.Generate_File_Name(lang, gender, I_Speaker, index, self.DataSetName,\"wav\")  \n",
     "                try:\n",
     "                    sound = pydub.AudioSegment.from_mp3(f\"{self.ReadClipsPath}/{clip['path']}\")\n",
-    "                    sound.export(f\"{self.SavePath}/{NewName}\", format=\"wav\") \n",
+    "                    # sound.export(f\"{self.SavePath}/{NewName}\", format=\"wav\") \n",
     "                    ConvertedFiles.append([NewName,Speaker,lang,sound.duration_seconds,gender,accent,self.DataSetName])\n",
     "                except:\n",
     "                    print(f\"Error while converting fille {clip['path']}\")\n",
@@ -354,8 +355,8 @@
     }
    ],
    "source": [
-    "ar = ReadMozilaDataset(\"../../DataSets/ExalVoxForge/mozila-ar\",\"../../DataSets/ExalVoxForge/mozila-ar/clips\",\"../../DataSets/FinalDataSet/clips\",\"CV\")\n",
-    "ar.Convert(True,\"../../DataSets/FinalDataSet/FinalDataSet.csv\")\n"
+    "# ar = ReadMozilaDataset(\"../../DataSets/ExalVoxForge/mozila-ar\",\"../../DataSets/ExalVoxForge/mozila-ar/clips\",\"../../DataSets/FinalDataSet/clips\",\"CV\")\n",
+    "# ar.Convert(True,\"../../DataSets/FinalDataSet/FinalDataSet.csv\")\n"
    ]
   },
   {
@@ -558,9 +559,48 @@
     }
    ],
    "source": [
-    "po = ReadMozilaDataset(\"../../DataSets/ExalVoxForge/po\",\"../../DataSets/ExalVoxForge/po/clips\",\"../../DataSets/FinalDataSet/clips\",\"CV\")\n",
-    "po.Convert(True,\"../../DataSets/FinalDataSet/FinalDataSet.csv\")\n",
+    "# po = ReadMozilaDataset(\"../../DataSets/ExalVoxForge/po\",\"../../DataSets/ExalVoxForge/po/clips\",\"../../DataSets/FinalDataSet/clips\",\"CV\")\n",
+    "# po.Convert(True,\"../../DataSets/FinalDataSet/FinalDataSet.csv\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I_speaker  : 95 / 6492\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar = ReadMozilaDataset(\"../../../DataSets/ExalVoxForge/Mozila_it\",\"../../../DataSets/ExalVoxForge/Mozila_it/clips\",\"../../../DataSets/FinalDataSet/clips\",\"CV\")\n",
+    "dfd = ar.Convert(True,\"../../../DataSets/FinalDataSet/FinalDataSet.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ReadMozilaDataset' object has no attribute 'NewDF'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32md:\\GP\\New folder\\Spoken-language-detection\\CreateDataSet\\ReadMozilaDataset.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/GP/New%20folder/Spoken-language-detection/CreateDataSet/ReadMozilaDataset.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ar\u001b[39m.\u001b[39;49mNewDF\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ReadMozilaDataset' object has no attribute 'NewDF'"
+     ]
+    }
+   ],
+   "source": [
+    "ar.NewDF"
    ]
   },
   {
@@ -570,6 +610,15 @@
    "outputs": [],
    "source": [
     "ds = pd.read_csv(\"../../DataSets/FinalDataSet/FinalDataSet.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1231 "
    ]
   },
   {
@@ -785,6 +834,35 @@
    ],
    "source": [
     "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_files = os.listdir(\"../../../DataSets/FinalDataSet/clips\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "138302"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([i for i in all_files if \"CV\" in i and \"it\" in i ])\n"
    ]
   },
   {
