--- a/MVP/Mel_Sepc/Create_MelSpe.ipynb
+++ b/MVP/Mel_Sepc/Create_MelSpe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "Dataset100 = SampleDataSet().SampleDataBase(\"../../DataSetCSV/FinalDataSet.csv\", 200* 60 *7, 8, 0, FileORTime=\"seconds\",Random_State=42, ISMax=True) "
+    "# Dataset100 = SampleDataSet().SampleDataBase(\"../../DataSetCSV/FinalDataSet.csv\", 200* 60 *7, 8, 0, FileORTime=\"seconds\",Random_State=42, ISMax=True) "
    ]
   },
   {
@@ -67,18 +67,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Dataset100.to_csv(\"Mel128_200_M_P.csv\")"
+    "# Dataset100.to_csv(\"Mel128_200_M_P.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Dataset100 = pd.read_csv(\"ImagesCSV/Mel128_200_M_NOP.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\mm\\anaconda3\\lib\\site-packages\\librosa\\util\\decorators.py:88: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
+      "  return f(*args, **kwargs)\n",
       "c:\\Users\\mm\\anaconda3\\lib\\site-packages\\librosa\\util\\decorators.py:88: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
       "  return f(*args, **kwargs)\n"
      ]
